# intro_algorithm

./: .gitignore  CMakeLists.txt
chapter_2/: CMakeLists.txt  bubble_sort.c  insertion_sort.c  merge_sort.c  misc.c  misc.h  selection_sort.c  sort.c  sort.h
chapter_4/: CMakeLists.txt  matrix_multiplication.c  maximum_subarray_problem.c
chapter_6/: CMakeLists.txt  heap.c
